@@ -240,6 +240,8 @@
 #define AIM_CB_ATH_LOGINRESPONSE 0x0003
 #define AIM_CB_ATH_AUTHREQ 0x0006
 #define AIM_CB_ATH_AUTHRESPONSE 0x0007
+#define AIM_CB_ATH_SECURID_REQUEST 0x000a
+#define AIM_CB_ATH_SECURID_RESPONSE 0x000b
 
 /*
  * SNAC Family: Email
